# snake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: apple.h  position.h  snake.h
src/: apple.cpp  main.cpp  snake.cpp
